2012-06-07 [mborik] implemented read/write memory block; some time-critical bugs in dialogues
2012-06-05 [mborik] imported rombor's improvements in emulation of 8253, ifTimer and PMD32; removed ifMusica occurrences
2012-06-04 [mborik] implemented emulation speed change
2012-06-01 [ikon/SinDiKat] comment translation sk>en (1st phase)
2012-05-31 [mborik] fullscreen toggle; some minor fixes
2012-05-30 [mborik] reworked status bar icons loading and some palette problems solved
2012-05-26 [mborik] bugfix and fine-tuning of OpenGL screen rendering
2012-05-24 [mborik] OpenGL screen rendering implementation which can be enabled with configure (--with-opengl)
2012-03-15 [mborik] instruction tracing in debugger (too buggy yet)
2012-03-04 [mborik] first implementation of debugger (drawings only)
2012-02-22 [mborik] improvements and some mods on quick-searching in fileSelector (with some ideas by ub880d :)
2012-02-21 [mikezt] implemented quick-searching in fileSelector
2012-02-18 [mborik] major bugfixes in Settings class and finalized saving of settings (autosave too :)
2012-02-11 [mborik] fixed TapeBrowser bug if tape file from configuration not exists
2012-02-05 [mborik] implemented file import to TapeBrowser and extended dialog with hex/dec shortcut
2012-02-04 [mborik] RGBA mask workaround added to screen surface creation for big endian compatibility
2012-02-02 [mborik] separation of GUI vs. Core code; GUI code separated to logical sections; implemented move of tape block or selection
2012-02-01 [mborik] implemented "pause on lost focus"; added "autosave settings" to menu; fixed callbacks of TapeBrowser popup items
2012-01-31 [mborik] externed GUI, Settings and TapeBrowser to make it global accessible
2012-01-27 [mborik] implemented methods for checking selection continuity and deleting selection to TapeBrowser
2012-01-23 [mborik] completely Valgrinated project, solved all memleaks and other bugs; implemented tape block selection with insert key